--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ amqp==5.1.1
 anyio==3.6.1
 apache-airflow==2.3.1
 apache-airflow-providers-celery==2.1.4
+apache-airflow-providers-common-sql==1.2.0
 apache-airflow-providers-ftp==2.1.2
 apache-airflow-providers-http==2.1.2
 apache-airflow-providers-imap==2.2.3
@@ -31,6 +32,7 @@ colorama==0.4.4
 colorlog==4.8.0
 commonmark==0.9.1
 configparser==5.3.0
+ConfigUpdater==3.1.1
 connexion==2.13.1
 cron-descriptor==1.2.24
 croniter==1.3.5
@@ -44,8 +46,9 @@ dnspython==2.2.1
 docutils==0.18.1
 email-validator==1.2.1
 entrypoints==0.4
+exceptiongroup==1.0.1
 executing==1.1.1
-Flask==1.1.2
+Flask==1.1.4
 Flask-AppBuilder==3.4.5
 Flask-Babel==2.0.0
 Flask-Caching==1.10.1
@@ -56,6 +59,7 @@ Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 flower==1.0.0
+git-filter-repo==2.38.0
 graphviz==0.20
 greenlet==1.1.2
 gunicorn==20.1.0
@@ -77,15 +81,19 @@ jupyter-client==7.4.2
 jupyter-core==4.11.1
 kombu==5.2.4
 lazy-object-proxy==1.7.1
+linkify-it-py==2.0.0
 lockfile==0.12.2
 Mako==1.2.0
 Markdown==3.3.7
+markdown-it-py==2.1.0
 MarkupSafe==2.0.1
 marshmallow==3.15.0
 marshmallow-enum==1.5.1
 marshmallow-oneofschema==3.0.1
 marshmallow-sqlalchemy==0.26.1
 matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.1
+mdurl==0.1.2
 nest-asyncio==1.5.6
 numpy==1.23.3
 oauthlib==3.2.1
@@ -122,7 +130,7 @@ redis==4.3.4
 requests==2.27.1
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
-rich==12.4.1
+rich==12.6.0
 setproctitle==1.2.3
 six==1.16.0
 sniffio==1.2.0
@@ -130,6 +138,7 @@ spotipy==2.20.0
 SQLAlchemy==1.4.16
 SQLAlchemy-JSONField==1.0.0
 SQLAlchemy-Utils==0.38.2
+sqlparse==0.4.3
 stack-data==0.5.1
 swagger-ui-bundle==0.0.9
 tabulate==0.8.9
@@ -139,6 +148,7 @@ text-unidecode==1.3
 tornado==6.1
 traitlets==5.4.0
 typing-extensions==4.2.0
+uc-micro-py==1.0.1
 unicodecsv==0.14.1
 urllib3==1.26.9
 vine==5.0.0
