--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,41 @@
-alembic==1.7.7
+alembic==1.8.1
 amqp==5.1.1
-anyio==3.6.1
-apache-airflow==2.3.1
+anyio==3.6.2
+apache-airflow==2.4.2
 apache-airflow-providers-celery==2.1.4
 apache-airflow-providers-common-sql==1.2.0
-apache-airflow-providers-ftp==2.1.2
-apache-airflow-providers-http==2.1.2
-apache-airflow-providers-imap==2.2.3
-apache-airflow-providers-sqlite==2.1.3
+apache-airflow-providers-ftp==3.1.0
+apache-airflow-providers-http==4.0.0
+apache-airflow-providers-imap==3.0.0
+apache-airflow-providers-sqlite==3.2.1
 apispec==3.3.2
 argcomplete==2.0.0
 asttokens==2.0.8
 async-timeout==4.0.2
-attrs==20.3.0
-Babel==2.10.1
+attrs==22.1.0
+Babel==2.10.3
 backcall==0.2.0
 billiard==3.6.4.0
-blinker==1.4
-cachelib==0.7.0
-cattrs==1.10.0
+blinker==1.5
+cachelib==0.9.0
+cattrs==22.2.0
 celery==5.2.6
-certifi==2020.12.5
-cffi==1.15.0
-charset-normalizer==2.0.12
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 clickclick==20.10.2
-colorama==0.4.4
+colorama==0.4.5
 colorlog==4.8.0
 commonmark==0.9.1
 configparser==5.3.0
 ConfigUpdater==3.1.1
-connexion==2.13.1
-cron-descriptor==1.2.24
-croniter==1.3.5
+connexion==2.14.1
+cron-descriptor==1.2.31
+croniter==1.3.7
 cryptography==36.0.2
 debugpy==1.6.3
 decorator==5.1.1
@@ -43,51 +43,51 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 dill==0.3.1.1
 dnspython==2.2.1
-docutils==0.18.1
-email-validator==1.2.1
+docutils==0.19
+email-validator==1.3.0
 entrypoints==0.4
-exceptiongroup==1.0.1
+exceptiongroup==1.0.0rc9
 executing==1.1.1
-Flask==1.1.4
-Flask-AppBuilder==3.4.5
+Flask==2.2.2
+Flask-AppBuilder==4.1.4
 Flask-Babel==2.0.0
-Flask-Caching==1.10.1
-Flask-JWT-Extended==3.25.1
-Flask-Login==0.4.1
+Flask-Caching==2.0.1
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
 Flask-OpenID==1.3.0
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
+Flask-WTF==1.0.1
 flower==1.0.0
 git-filter-repo==2.38.0
-graphviz==0.20
-greenlet==1.1.2
+graphviz==0.20.1
+greenlet==1.1.3.post0
 gunicorn==20.1.0
 h11==0.12.0
-httpcore==0.14.7
-httpx==0.22.0
+httpcore==0.15.0
+httpx==0.23.0
 humanize==4.1.0
-idna==3.3
-importlib-metadata==4.11.4
-importlib-resources==5.7.1
+idna==3.4
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
 inflection==0.5.1
 ipykernel==6.16.0
 ipython==8.5.0
-itsdangerous==1.1.0
+itsdangerous==2.1.2
 jedi==0.18.1
-Jinja2==3.0.3
-jsonschema==4.5.1
+Jinja2==3.1.2
+jsonschema==4.16.0
 jupyter-client==7.4.2
 jupyter-core==4.11.1
 kombu==5.2.4
 lazy-object-proxy==1.7.1
 linkify-it-py==2.0.0
 lockfile==0.12.2
-Mako==1.2.0
-Markdown==3.3.7
+Mako==1.2.3
+Markdown==3.4.1
 markdown-it-py==2.1.0
-MarkupSafe==2.0.1
-marshmallow==3.15.0
+MarkupSafe==2.1.1
+marshmallow==3.18.0
 marshmallow-enum==1.5.1
 marshmallow-oneofschema==3.0.1
 marshmallow-sqlalchemy==0.26.1
@@ -104,56 +104,58 @@ pathspec==0.9.0
 pendulum==2.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
+pkgutil-resolve-name==1.3.10
 pluggy==1.0.0
 prison==0.2.1
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
-psutil==5.9.1
+psutil==5.9.3
 psycopg2==2.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
-Pygments==2.12.0
-PyJWT==1.7.1
-pyparsing==2.4.7
+Pygments==2.13.0
+PyJWT==2.6.0
+pyparsing==3.0.9
 pyrsistent==0.18.1
-python-daemon==2.3.0
+python-daemon==2.3.1
 python-dateutil==2.8.2
 python-nvd3==0.15.0
 python-slugify==6.1.2
 python3-openid==3.2.0
-pytz==2022.1
+pytz==2022.5
 pytzdata==2020.1
-PyYAML==5.4.1
+PyYAML==6.0
 pyzmq==24.0.1
 redis==4.3.4
-requests==2.27.1
+requests==2.28.1
 requests-oauthlib==1.3.1
+requests-toolbelt==0.10.0
 rfc3986==1.5.0
 rich==12.6.0
-setproctitle==1.2.3
+setproctitle==1.3.2
 six==1.16.0
-sniffio==1.2.0
+sniffio==1.3.0
 spotipy==2.20.0
-SQLAlchemy==1.4.16
+SQLAlchemy==1.4.27
 SQLAlchemy-JSONField==1.0.0
-SQLAlchemy-Utils==0.38.2
+SQLAlchemy-Utils==0.38.3
 sqlparse==0.4.3
 stack-data==0.5.1
 swagger-ui-bundle==0.0.9
-tabulate==0.8.9
-tenacity==8.0.1
-termcolor==1.1.0
+tabulate==0.9.0
+tenacity==8.1.0
+termcolor==2.0.1
 text-unidecode==1.3
 tornado==6.1
 traitlets==5.4.0
-typing-extensions==4.2.0
+typing-extensions==4.4.0
 uc-micro-py==1.0.1
 unicodecsv==0.14.1
-urllib3==1.26.9
+urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.5
-Werkzeug==1.0.1
+Werkzeug==2.2.2
 wrapt==1.14.1
-WTForms==2.3.3
-zipp==3.8.0
+WTForms==3.0.1
+zipp==3.9.0
