--- a/requirements.txt
+++ b/requirements.txt
@@ -125,6 +125,7 @@ python-slugify==6.1.2
 python3-openid==3.2.0
 pytz==2022.5
 pytzdata==2020.1
+pywin32==304
 PyYAML==6.0
 pyzmq==24.0.1
 redis==4.3.4
@@ -147,7 +148,7 @@ tabulate==0.9.0
 tenacity==8.1.0
 termcolor==2.0.1
 text-unidecode==1.3
-tornado==6.1
+tornado==6.2
 traitlets==5.4.0
 typing-extensions==4.4.0
 uc-micro-py==1.0.1
