--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ argcomplete==2.0.0
 asttokens==2.0.8
 async-timeout==4.0.2
 attrs==22.1.0
+Automat==20.2.0
 Babel==2.10.3
 backcall==0.2.0
+bcrypt==3.2.0
 billiard==3.6.4.0
 blinker==1.5
 cachelib==0.9.0
@@ -22,26 +24,34 @@ cattrs==22.2.0
 celery==5.2.6
 certifi==2022.9.24
 cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 clickclick==20.10.2
+cloud-init==22.3.4
 colorama==0.4.5
 colorlog==4.8.0
+command-not-found==0.3
 commonmark==0.9.1
+configobj==5.0.6
 configparser==5.3.0
 ConfigUpdater==3.1.1
 connexion==2.14.1
+constantly==15.1.0
 cron-descriptor==1.2.31
 croniter==1.3.7
 cryptography==36.0.2
+dbus-python==1.2.18
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.13
 dill==0.3.1.1
+distro==1.7.0
+distro-info==1.1+ubuntu1
 dnspython==2.2.1
 docutils==0.19
 email-validator==1.3.0
@@ -65,21 +75,31 @@ greenlet==1.1.3.post0
 gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.15.0
+httplib2==0.20.4
 httpx==0.23.0
 humanize==4.1.0
+hyperlink==21.0.0
 idna==3.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
+incremental==21.3.0
 inflection==0.5.1
 ipykernel==6.16.0
 ipython==8.5.0
 itsdangerous==2.1.2
 jedi==0.18.1
+jeepney==0.8.0
 Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
 jsonschema==4.16.0
-jupyter-client==7.4.2
 jupyter-core==4.11.1
+jupyter_client==7.4.2
+keyring==23.8.2
 kombu==5.2.4
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 lazy-object-proxy==1.7.1
 linkify-it-py==2.0.0
 lockfile==0.12.2
@@ -94,7 +114,9 @@ marshmallow-sqlalchemy==0.26.1
 matplotlib-inline==0.1.6
 mdit-py-plugins==0.3.1
 mdurl==0.1.2
+more-itertools==8.10.0
 nest-asyncio==1.5.6
+netifaces==0.11.0
 numpy==1.23.3
 oauthlib==3.2.1
 packaging==21.3
@@ -104,22 +126,31 @@ pathspec==0.9.0
 pendulum==2.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 pluggy==1.0.0
 prison==0.2.1
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 psutil==5.9.3
-# psycopg2==2.9.4
+psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.13.0
+PyGObject==3.42.2
+PyHamcrest==2.0.2
 PyJWT==2.6.0
+pyOpenSSL==21.0.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.3.0+ubuntu2
 python-daemon==2.3.1
 python-dateutil==2.8.2
+python-debian==0.1.46
+python-magic==0.4.26
 python-nvd3==0.15.0
 python-slugify==6.1.2
 python3-openid==3.2.0
@@ -133,29 +164,40 @@ requests-oauthlib==1.3.1
 requests-toolbelt==0.10.0
 rfc3986==1.5.0
 rich==12.6.0
+SecretStorage==3.3.3
+service-identity==18.1.0
 setproctitle==1.3.2
 six==1.16.0
 sniffio==1.3.0
+sos==4.4
 spotipy==2.20.0
 SQLAlchemy==1.4.27
 SQLAlchemy-JSONField==1.0.0
 SQLAlchemy-Utils==0.38.3
 sqlparse==0.4.3
+ssh-import-id==5.11
 stack-data==0.5.1
 swagger-ui-bundle==0.0.9
+systemd-python==235
 tabulate==0.9.0
 tenacity==8.1.0
 termcolor==2.0.1
 text-unidecode==1.3
 tornado==6.2
 traitlets==5.4.0
-typing-extensions==4.4.0
+Twisted==22.4.0
+typing_extensions==4.4.0
+ubuntu-advantage-tools==27.11.3
 uc-micro-py==1.0.1
+ufw==0.36.1
+unattended-upgrades==0.1
 unicodecsv==0.14.1
 urllib3==1.26.12
 vine==5.0.0
+wadllib==1.3.6
 wcwidth==0.2.5
 Werkzeug==2.2.2
 wrapt==1.14.1
 WTForms==3.0.1
 zipp==3.9.0
+zope.interface==5.4.0
